@@ -1,12 +1,13 @@
 Package: Rvcg
 Type: Package
 Title: Manipulations of Triangular Meshes Based on the 'VCGLIB' API
-Version: 0.22.2
-Date: 2023-12-04
+Version: 0.23
+Date: 2024-06-25
 Authors@R: c(
     person("Stefan", "Schlager",, "zarquon42@gmail.com", c("aut", "cre", "cph")),
     person("Girinon", "Francois",,, c("ctb")),
-    person("Tim", "Schaefer",, "ts+code@rcmd.org", c("ctb"))
+    person("Tim", "Schaefer",, "ts+code@rcmd.org", c("ctb")),
+    person("Zhengjia", "Wang",, "dipterix.wang@gmail.com", c("ctb"))
     )
 Description: Operations on triangular meshes based on 'VCGLIB'. This package
     integrates nicely with the R-package 'rgl' to render the meshes processed by
@@ -34,10 +35,11 @@ URL: https://github.com/zarquon42b/Rvcg,
 Encoding: UTF-8
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2023-12-06 11:51:01 UTC; schlager
+Packaged: 2024-06-25 08:28:48 UTC; schlager
 Author: Stefan Schlager [aut, cre, cph],
   Girinon Francois [ctb],
-  Tim Schaefer [ctb]
+  Tim Schaefer [ctb],
+  Zhengjia Wang [ctb]
 Maintainer: Stefan Schlager <zarquon42@gmail.com>
 Repository: CRAN
-Date/Publication: 2023-12-06 14:10:02 UTC
+Date/Publication: 2024-06-27 09:50:02 UTC
