@@ -49,6 +49,7 @@ export(vcgRaySearch)
 export(vcgSample)
 export(vcgSearchKDtree)
 export(vcgSmooth)
+export(vcgSmoothImplicit)
 export(vcgSphere)
 export(vcgSphericalCap)
 export(vcgSquare)
