@@ -2,8 +2,8 @@
 % Please edit documentation in R/Rvcg-package.R
 \docType{package}
 \name{Rvcg-package}
-\alias{Rvcg-package}
 \alias{Rvcg}
+\alias{Rvcg-package}
 \title{Interface between R and vcglib libraries for mesh operations}
 \description{
 Provides meshing functionality from vcglib (meshlab) for R. E.g. mesh
@@ -13,13 +13,22 @@ smoothing, mesh decimation, closest point search.
 \tabular{ll}{
 Package: \tab Rvcg\cr
 Type: \tab Package\cr
-Version: \tab 0.22.2\cr
-Date: \tab 2023-12-04\cr
+Version: \tab 0.23\cr
+Date: \tab 2024-06-25\cr
 License: \tab GPL\cr
 LazyLoad: \tab yes\cr }
 }
 \references{
 To be announced
+}
+\seealso{
+Useful links:
+\itemize{
+  \item \url{https://github.com/zarquon42b/Rvcg}
+  \item \url{https://github.com/cnr-isti-vclab/vcglib}
+  \item Report bugs at \url{https://github.com/zarquon42b/Rvcg/issues}
+}
+
 }
 \author{
 Stefan Schlager
